--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,9 +8,7 @@
    <form method="POST" action="/team">
       <p>Your Name: <input type="text" name="name"></p>
       <p>Your Favorite Food: <input type="text" name="favorite_food"></p>
-      <input type="submit">
+      <input type="submit" id="Submit">
     </form>
  </body>
 </html>
-
-
