automatically backed up by learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -6,8 +6,8 @@
  </head>
  <body>
    <form method="POST" action="/team">
-      <p>Your Name: <input type="text" name="name"></p>
-      <p>Your Favorite Food: <input type="text" name="favorite_food"></p>
+      <p>Name: <input type="text" name="name"></p>
+      <p>Coach: <input type="text" name="coach"></p>
       <input type="submit" id="Submit">
     </form>
  </body>
