automatically backed up by learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,6 +8,11 @@
    <form method="POST" action="/team">
       <p>Name: <input type="text" name="name"></p>
       <p>Coach: <input type="text" name="coach"></p>
+      <p>pg: <input type="text" name="pg"></p>
+      <p>sg: <input type="text" name="sg"></p>
+      <p>sf: <input type="text" name="pg"></p>
+      <p>pf: <input type="text" name="sg"></p>
+      <p>c: <input type="text" name="c"></p>
       <input type="submit" id="Submit">
     </form>
  </body>
