--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -10,8 +10,8 @@
       <p>Coach: <input type="text" name="coach"></p>
       <p>pg: <input type="text" name="pg"></p>
       <p>sg: <input type="text" name="sg"></p>
-      <p>sf: <input type="text" name="pg"></p>
-      <p>pf: <input type="text" name="sg"></p>
+      <p>sf: <input type="text" name="sf"></p>
+      <p>pf: <input type="text" name="pf"></p>
       <p>c: <input type="text" name="c"></p>
       <input type="submit" id="Submit">
     </form>
